# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/idl_tool/idl.gni")
import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

idl_gen_interface("cli_tool_manager_interface") {
  sources = [
    "ICliToolManager.idl",
    "ICliToolManagerScheduler.idl",
    "IExecToolCallback.idl",
  ]

  sources_common = [ "ICliToolCmd.idl" ]
  hitrace = "HITRACE_TAG_ABILITY_MANAGER"
  log_domainid = "0xD001365"
  log_tag = "CliToolManager"

  subsystem_name = "ability"
  part_name = "ability_runtime"
}

config("cli_tool_client_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${ability_runtime_innerkits_path}/ability_manager/include",
    "${ability_runtime_services_path}/common/include",
    "${target_gen_dir}",
  ]
}

ohos_shared_library("cli_tool_client") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  public_configs = [ ":cli_tool_client_config" ]

  sources = [
    "src/arg_mapping.cpp",
    "src/cli_mgr_load_callback.cpp",
    "src/cli_event_reply_manager.cpp",
    "src/cli_session_info.cpp",
    "src/cli_session_subscription_manager.cpp",
    "src/cli_tool_event.cpp",
    "src/cli_tool_mgr_client.cpp",
    "src/cli_tool_mgr_scheduler_recipient.cpp",
    "src/exec_options.cpp",
    "src/exec_result.cpp",
    "src/exec_tool_callback_impl.cpp",
    "src/exec_tool_param.cpp",
    "src/sub_command_info.cpp",
    "src/tool_info.cpp",
    "src/tool_summary.cpp",
  ]
  output_values = get_target_outputs(":cli_tool_manager_interface")
  sources += filter_include(output_values, [ "*.cpp" ])
  defines = [ "AMS_LOG_TAG = \"CliToolManager\"" ]

  deps = [
    ":cli_tool_manager_interface",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "ability"
  part_name = "ability_runtime"
}
