# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

config("clisa_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${cli_tool_framework_path}/interfaces/cli_tool/include",
    "${ability_runtime_services_path}/common/include",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-BINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("climgr") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  shlib_type = "sa"

  configs = [
    ":clisa_config",
  ]

  sources = [
    "src/cli_tool_mgr_service.cpp",
    "src/cli_tool_mgr_stub.cpp",
  ]

  deps = []

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "ability"
  part_name = "ability_runtime"
}
