# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

ohos_source_set("cli_common") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "include",
    "${ability_runtime_services_path}/common/include",
    "${cli_tool_framework_path}/interfaces/cli_tool/include",
  ]

  sources = [
    "src/cli_event_report.cpp",
  ]

  deps = [
    "${ability_runtime_services_path}/common:hisysevent_report",
    "${cli_tool_framework_path}/interfaces/cli_tool:cli_tool_client",
  ]

  external_deps = [
    "ability_base:want",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
  ]

  subsystem_name = "ability"
  part_name = "ability_runtime"
}
