# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

group("unittest") {
  testonly = true
  deps = [
    "cli_common_util_test:cli_common_util_test",
    "cli_event_reply_manager_test:cli_event_reply_manager_test",
    "cli_event_report_test:cli_event_report_test",
    "cli_function_data_manager_test:cli_function_data_manager_test",
    "cli_tool_data_manager_test:cli_tool_data_manager_test",
    "cli_tool_event_test:cli_tool_event_test",
    "cli_tool_mgr_client_test:cli_tool_mgr_client_test",
    "cli_tool_mgr_scheduler_recipient_test:cli_tool_mgr_scheduler_recipient_test",
    "cli_tool_mgr_service_test:cli_tool_mgr_service_test",
    "cli_session_info_test:cli_session_info_test",
    "cli_session_subscription_manager_test:cli_session_subscription_manager_test",
    "event_dispatcher_test:event_dispatcher_test",
    "exec_options_test:exec_options_test",
    "exec_result_test:exec_result_test",
    "exec_tool_param_test:exec_tool_param_test",
    "function_info_test:function_info_test",
    "invoke_function_callback_client_test:invoke_function_callback_client_test",
    "invoke_function_executor_test:invoke_function_executor_test",
    "io_monitor_test:io_monitor_test",
    "permission_query_util_test:permission_query_util_test",
    "process_manager_test:process_manager_test",
    "session_record_test:session_record_test",
    "sub_command_info_test:sub_command_info_test",
    "tool_info_test:tool_info_test",
    "tool_summary_test:tool_summary_test",
    "tool_util_test:tool_util_test",
  ]
}

