# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")
import("../../ets_environment.gni")

config("public_ets_environment_config") {
  include_dirs = [
    "include",
  ]
}

ohos_shared_library("ets_environment") {
  branch_protector_ret = "pac_ret"

  public_configs = [ ":public_ets_environment_config" ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "${ability_runtime_path}/ets_environment/interfaces/inner_api",
    "${ability_runtime_path}/frameworks/ets/ani/ani_common/include",
    "${ability_runtime_path}/interfaces/inner_api",
    "${ability_runtime_services_path}/common/include", 
  ]

  sources = [
    "src/dynamic_loader.cpp",
    "src/ets_environment.cpp",
  ]

  defines = []

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "faultloggerd:libunwinder",
    "hilog:libhilog",
    "json:nlohmann_json_static",
    "napi:ace_napi",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
  ]

  if (ability_runtime_graphics) {
    defines = [ "SUPPORT_GRAPHICS" ]
    external_deps += [ "ace_engine:ace_uicontent" ]
  }

  subsystem_name = "ability"
  innerapi_tags = [ "platformsdk" ]
  part_name = "ability_runtime"
}
