# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

ohos_shared_library("ui_extension_ability_ani_kit") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }

  include_dirs = [
    "./include",
    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/app",
    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/context",
    "${ability_runtime_services_path}/common/include",
    "${ability_runtime_path}/interfaces/kits/native/ability/native",
    "${ability_runtime_path}/interfaces/inner_api/insight_intent/insight_intent_context",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/ability_runtime",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/insight_intent_executor",
    "${ability_runtime_path}/interfaces/kits/native/ability/native/ui_extension_ability",
    "${ability_runtime_path}/frameworks/js/napi/inner/napi_common/ani_common",
    "${ability_runtime_path}/frameworks/native/ability/native/ability_runtime/sts",
  ]

  sources = [ "./src/sts_ui_extension.cpp" ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
    "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
    "${ability_runtime_innerkits_path}/ability_manager:ability_start_options",
    "${ability_runtime_innerkits_path}/ability_manager:ability_start_options",
    "${ability_runtime_innerkits_path}/runtime:runtime",
    "${ability_runtime_napi_path}/inner/napi_common:napi_common",
    "${ability_runtime_native_path}/ability:ability_context_native",
    "${ability_runtime_native_path}/ability:ability_context_native",
    "${ability_runtime_native_path}/ability/native:ability_business_error",
    "${ability_runtime_native_path}/ability/native:ability_business_error",
    "${ability_runtime_native_path}/ability/native:abilitykit_native",
    "${ability_runtime_native_path}/ability/native:abilitykit_utils",
    "${ability_runtime_native_path}/ability/native:insight_intent_executor",
    "${ability_runtime_native_path}/ability/native:service_extension",
    "${ability_runtime_native_path}/ability/native:ui_service_extension",
    "${ability_runtime_native_path}/ability/native:ui_service_extension_connection",
    "${ability_runtime_native_path}/appkit:app_context",
    "${ability_runtime_native_path}/appkit:app_context",
    "${ability_runtime_native_path}/appkit:app_context_utils",
    "${ability_runtime_path}/frameworks/native/ability/native:ui_extension",
    "${ability_runtime_services_path}/abilitymgr:abilityms",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "window_manager:embeddablewindowstage_kit",
    "window_manager:extensionwindow_napi",
  ]

  if (ability_runtime_graphics) {
    defines = [ "SUPPORT_SCREEN" ]
    external_deps += [
      "ace_engine:ace_uicontent",
      "window_manager:libdm",
    ]

    public_external_deps = [ "window_manager:scene_session_manager" ]
  }

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "ability"
  part_name = "ability_runtime"
}
# TODO
# generate_static_abc("ui_extension_ability_ani_abc") {
#  arktsconfig = "${ability_runtime_path}/frameworks/ani/ui_extension_ability/ui_extension_ability_config.json"
#  dst_file = "$target_out_dir/ui_extension_ability_ani.abc"
#  out_puts = [ "$target_out_dir/ui_extension_ability_ani.abc" ]
#  is_boot_abc = "True"
# device_dst_file = "system/framework/ui_extension_ability_ani.abc"
# }
