# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

config("ability_runtime_ndk_config") {
  include_dirs = [
    "${ability_runtime_ndk_path}",
    "${ability_runtime_ndk_path}/ability_runtime",
  ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("ability_runtime") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "include",
    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/",
  ]

  configs = [ "${ability_runtime_services_path}/common:common_config" ]
  public_configs = [ ":ability_runtime_ndk_config" ]

  sources = [ "src/application_context.cpp" ]

  deps = [
    "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
    "${ability_runtime_native_path}/appkit:app_context",
  ]

  external_deps = [
    "ability_base:ability_base_want",
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  if (ability_runtime_graphics) {
    external_deps += [
      "graphic_2d:color_manager",
      "image_framework:image",
    ]
    defines = [
      "SUPPORT_GRAPHICS",
      "SUPPORT_SCREEN",
    ]
  }

  output_extension = "so"
  innerapi_tags = [ "ndk" ]
  install_images = [ "system" ]
  subsystem_name = "ability"
  part_name = "ability_runtime"
}
